# JustAVideoTool

./: .gitignore  LICENSE  README.md  installed_venv.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_app.yml  release.yml
src/: main.py  test.py
src/modules/: assets_dir.py  modular_pipeline.py  realCUGAN.py  realESRGAN.py  real_cugan.py  setup.py  video_transformer.py
src/modules/nvidia/: RIFE.py  __init__.py  realCUGAN.py  realESRGAN.py
src/modules/t/: __init__.py  bicubic.py  bilinear.py  interarea.py  lanczos.py
src/modules/t/nvidia/: RIFE.py  __init__.py
src/views/: codecs.py  console.py  encode.py  encoding.py  generic.py  input.py  run.py  transform.py  transformers.py
